[tool.poetry]
name = "doit"
version = "0.1.0"
description = ""
authors = ["Rasha Moumneh <rasha@fastmailteam.com>"]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
